fixed last searches, started dark mode

--- a/styles/home.css
+++ b/styles/home.css
@@ -8,9 +8,35 @@
     --very-light-grey: #F0F0F0;
     --grey: #515151;
     --fair-grey2: #939393;
+    --dark-grey: #303030;
     --black-gradient: rgba(255,255,255, 0);
     --dark-grey: #3D3D3D; 
     --red: #ff0000; 
+    --black: #000000;
+    --shadow: #141414;
+}
+
+.loading {
+    display: flex;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.loading::after {
+    content:"";
+    width: 10px;
+    height: 10px;
+    border: 5px solid #dddddd;
+    border-top-color: red;
+    border-radius: 50%;
+    animation: loading 1s linear infinite;
+}
+
+@keyframes loading {
+    to {
+        transform: rotate(1turn);
+    }
 }
 
 /*---------------Tooltip---------------*/
@@ -112,20 +138,24 @@ a {
 }
 
 body {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: var(--whiteboard); 
     color: var(--grey);
     overflow-y: visible;
+    overflow-x: hidden;
 }
 
 html {
     width: 100%;
+    max-width:1440px;
 }
 
 main {
     height: 100vh;
     padding: 0 34px;
+    margin: 0 auto;
+    max-width: 1440px;
 }
 
 .container-main {
@@ -149,6 +179,7 @@ header {
     background-image: linear-gradient(var(--green1), var(--green2), var(--green3));
     height: 94px;
     box-shadow: 1px -3px 36px rgba(0, 0, 0, 0.5);
+    width: 100vw;
 }
 
 .container-hamburger, .hamburger {
@@ -573,11 +604,11 @@ img.heart-icon-sc {
     color: var(--grey);
 }
 
-img.playstation-icon-sc, img.xbox-icon-sc, img.windows-icon-sc, img.icon-sc {
+img.playstation-sc-icon, img.xbox-sc-icon, img.windows-sc-icon, img.icon {
     height: 20px;
 }
 
-img.playstation-icon-sc, img.xbox-icon-sc {
+img.playstation-sc-icon, img.xbox-sc-icon {
     margin-right:10px;
 }
 
@@ -863,23 +894,44 @@ hr:last-child {
 }
 
 /*-----------Dark mode------------*/
-.dark-mode-f, .dark-mode-f a, .dark-mode-f h1, .dark-mode-f h2, .dark-mode-f h3 {
-    background-color: #141414;
-    color: #ffffff;
+
+.dark-mode-filter {
+    filter: brightness(1) invert(1);
+}
+
+.dark-mode-white {
+    filter: brightness(0) invert(1);
+}
+
+.dark-mode-change {
+    background-color: var(--shadow);
+}
+
+.dark-mode-change a, .dark-mode-change h1, .dark-mode-change h2, .dark-mode-change p {
+    color: var(--white)
+}
+
+.dark-mode-change article {
+    background-color: var(--dark-grey);
+}
+
+.dark-mode-change footer::after {
+    content: "";
+    position: fixed;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom, var(--black-gradient), var(--black) 90%);
+    width: 100%;
+    height: 4em;
 }
 
 /*-----------Media Queries------------*/
 
-/*Responsive for larger screen*/
-
-@media (min-width: 1920px) {
-    nav {
-        min-width:200px;
-    }
-}
 
 /*Responsive Tablet*/
-@media (max-width: 768px) {
+@media (max-width: 820px) {
 
     header {
         height: 78px;
@@ -899,6 +951,10 @@ hr:last-child {
         display:none;
     }
     
+    .container-cards {
+        justify-content: center;
+    }
+
     .hamburger {
         display: flex;
         height: 16px;
@@ -927,7 +983,7 @@ hr:last-child {
         flex-direction: column;
         background-color: var(--white);
         width: 100%;
-        height: 1024px;
+        height: 100vh;
         z-index: 1;
         position: fixed;
         padding: 0px 16px 0px 16px;
@@ -952,9 +1008,6 @@ hr:last-child {
     }
     
     .cross-hamburger {
-        /* display:flex;
-        justify-content: flex-end;
-        cursor:pointer;*/
         height: 18px; 
         margin-left: auto;
         align-self: flex-start;
@@ -968,6 +1021,10 @@ hr:last-child {
 
     .at-user {
         font-size:14px;
+    }
+
+    .dark-mobile-container {
+        display:none;
     }
 
     .navigation-links {
@@ -987,6 +1044,10 @@ hr:last-child {
         z-index:1;
     }
 
+    .search-games {
+        margin-right: 55px;
+    }
+
     .navigation-links a {
         color: var(--grey);
     }
@@ -998,12 +1059,20 @@ hr:last-child {
         margin-bottom: 20px;
     }
 
+    .log-out-ham {
+        color: var(--grey)
+    }
+
+    .hr-line {
+        margin-bottom:15px;
+    }
+
     .navigation-links a:first-child {
         color: var(--green2);
     }
     
     .skeleton {
-        justify-content: flex-start;
+        justify-content: center;
     }
 
     .card-skeleton {
@@ -1090,8 +1159,25 @@ hr:last-child {
         height: 14px;
     }
 
+    .hr-line {
+        margin-bottom: 0px;
+    }
+
     .cross-hamburger {
         height: 14px;
+    }
+
+    .dark-mobile-container {
+        display:block;
+    }
+
+    .dark-mode-mobile {
+        display:flex;
+        margin-top: 10px;
+    }
+    
+    .button-dark-off {
+        margin-left: 10px;
     }
 
     .title h1 {
@@ -1133,21 +1219,16 @@ hr:last-child {
     }
 
     .logt {
-        gap: 50px;
+        gap: 10px;
     }
 
     .card-skeleton {
-        width: 290px;
+        width: 100%;
         height: 365px;
     }
 
     .title-skeleton {
         width: 85%;
-    }
-
-    .skeleton {
-        margin-left:15px;
-        justify-content: flex-start;
     }
     
     article, .game-ph img {
@@ -1168,7 +1249,7 @@ hr:last-child {
     }
 
     .menu-hamburger {
-        height: 567px;
+        height: 100vh;
     }
 
     .navigation-links {
