--- a/styles/login.css
+++ b/styles/login.css
@@ -14,6 +14,7 @@
     --dark-grey: #3D3D3D;
     --whiteboard: #F0F0F0;
     --red: #ff0000;
+    --header-color: #ffffff4d;
 }
 
 .tooltip {
@@ -41,24 +42,23 @@
 html {
     height: 100%;
     margin: 0;
-   
 }
 
 body {
     background-image: url("../assets/background-1.jpg");
     height: 100vh;
+    width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0; 
     background-attachment: fixed;
-    
 } 
 
 .active {
     cursor: pointer;
     display: flex;
     background-color: var(--grey);
-    opacity: 100% !important;
+    opacity: 100%;
     width: 7px;
     height: 7px;
     border-radius: 50%
@@ -99,7 +99,7 @@ header {
     align-items: center;
     width: 100%;
     height: 115px;
-    background: rgba(255, 255, 255, 0.3);
+    background: var(--header-color);
     backdrop-filter: blur(8px);
 }
 
@@ -108,7 +108,6 @@ header img {
     height: 37.46px;
     margin-left: 53.23px;
 }
-
 
 /*-------------Login-------------*/
 
@@ -137,7 +136,6 @@ header img {
 }
 
 .welcome {
-    
     font-size: 1.25rem;
     font-weight: 700;
     color: var(--grey);
@@ -146,7 +144,6 @@ header img {
 
 .login {
     font-weight: 400;
-    font-size: 16px;
     line-height: 21px;
     margin-bottom:32px;
 }
@@ -203,7 +200,7 @@ input[type='password'] {
 }
 
 .label-remember-me {
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 #error-container {
@@ -213,8 +210,8 @@ input[type='password'] {
 
 input[type=checkbox] {
     -webkit-appearance: none;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 20px;
+    height: 20px;
     color: var(--fair-grey);
     border: 1.5px solid var(--fair-grey);
     border-radius: 4px;
@@ -231,7 +228,7 @@ input[type=checkbox]:checked {
 .forgot-password {
     color: var(--green);
     margin-left:115px;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 600;
     align-self: center;
     cursor: pointer;
@@ -261,13 +258,13 @@ input[type=checkbox]:checked {
 }
 
 .registration-none {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
     margin-right: 7px;
 }
 
 .registration-now {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 600;
     color: var(--secondary-green);
     cursor: pointer;
@@ -282,7 +279,7 @@ input[type=checkbox]:checked {
     display: flex;
     width: 100%;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 19px;
     text-align: center;
     color: var(--grey);
@@ -364,7 +361,7 @@ a img {
 
 /*Responsive Tablet*/
 
-@media (max-width: 768px){
+@media (max-width: 820px){
     header {
         display: flex;
         justify-content: center;
@@ -377,12 +374,10 @@ a img {
 
     .auth-page-card {
         margin:0;
-        margin-right: 35px;
     }
 
     .carrousel {
         margin-top:65px;
-        margin-right:40px;
     }
 
     .slide1 {
